--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -18,11 +18,6 @@
 
     <string name="app_name">EhViewer</string>
 
-    <!-- Theme -->
-    <string name="theme_light">亮色主題</string>
-    <string name="theme_dark">暗色主題</string>
-    <string name="theme_black">黑色主題</string>
-
     <string name="homepage">首頁</string>
     <string name="subscription">訂閱</string>
     <string name="whats_hot">熱門</string>
@@ -33,19 +28,12 @@
 
     <string name="username">使用者名稱</string>
     <string name="password">密碼</string>
-    <string name="recaptcha">驗證碼（非必需）</string>
-
-    <string name="recaptcha_none">點我</string>
-    <string name="recaptcha_loading">載入中…</string>
-    <string name="recaptcha_failure">失敗</string>
 
     <string name="sign_in">登入</string>
     <string name="register">註冊</string>
     <string name="sign_in_via_webview">透過網頁登入</string>
     <string name="sign_in_via_cookies">透過 Cookie 登入</string>
-    <string name="display_name_dialog_title">輸入暱稱</string>
     <string name="display_name">暱稱</string>
-    <string name="display_name_is_empty">暱稱是空的</string>
     <string name="sign_in_first">請先登入</string>
 
     <string name="default_display_name">Little Hippo</string>
@@ -95,33 +83,21 @@
 
     <string name="kokomade_tip">設定->Eh->圖庫站台->e-hentai</string>
 
-    <string name="app_waring">本應用程式中內容來自網際網路，部分內容可能對您的生理及心理造成難以恢復的傷害。本應用程式的作者不會對由其所造成的任何影響負責。\n\n未成年人應在監護人指導下使用本應用程式。</string>
+    <string name="app_waring">本應用程式中內容來自網際網路，部分內容可能對您的生理及心理造成難以恢復的傷害。本應用程式的作者不會對由其所造成的任何影響負責。\n\n未成年人應在監護人指導下使用本應用程式。\n\n繼續使用即代表您同意上述條款。</string>
     <string name="error_username_cannot_empty">使用者名稱欄位不能為空</string>
     <string name="error_password_cannot_empty">密碼欄位不能為空</string>
     <string name="skip_signing_in">略過登入</string>
     <string name="sign_in_failed">登入失敗</string>
     <string name="sign_in_failed_tip">若持續出錯，請嘗試“通過網頁登入”或“通過 Cookie 登入”。</string>
-    <string name="sign_in_failed_plain">這可能是網站更新造成的，也有可能是哪裡出錯了。您可以選擇在登入按鈕下方透過網頁登入或者輸入 cookie，也可以略過登入。略過登入可能導致無法正常使用應用程式。如果你已經在 0.6.x 版登入過了，請先試試“透過 Cookie 登入”。</string>
     <string name="press_twice_exit">再按一次離開</string>
-    <string name="content_layout_restore_tip">點擊重試</string>
-    <string name="write_rationale">EhViewer 將請求裝置外部儲存空間的存取許可以下載圖庫。您願意授權嗎？</string>
-    <string name="you_rejected_me">好難過</string>
     <string name="get_it">知道了</string>
     <string name="accept">接受</string>
     <string name="reject">拒絕</string>
-
-    <string name="help_route">設定->關於->說明</string>
 
     <!-- Select scene -->
     <string name="select_scene">你想選擇哪個圖庫站台？</string>
     <string name="select_scene_explain">e-hentai：對任何人開放\nexhentai：僅對登入使用者開放</string>
     <string name="no_select">請選擇一個站台</string>
-
-    <!-- Update -->
-    <string name="update">更新</string>
-    <string name="update_plain">版本：%1$s\n大小：%2$s\n\n%3$s</string>
-    <string name="update_to_date">EhViewer 已是最新版本</string>
-    <string name="update_ignore">忽略</string>
 
     <!-- Gallery List -->
     <string name="gallery_list_search_bar_hint_exhentai">在 ExHentai 中搜尋</string>
@@ -144,7 +120,7 @@
     <string name="search_specify_tag">指定標籤</string>
     <string name="search_enable_advance">啟用進階選項</string>
 
-    <string name="search_tip">一般搜尋：就是搜尋。\n\n訂閱搜素：在訂閱中搜索。\n\n指定上傳者：列出該上傳者上傳的圖庫。其他選項會被忽略。\n\n指定標籤：列出含有該標籤的圖庫。其他選項會被忽略。</string>
+    <string name="search_tip">一般搜尋：就是搜尋。\n\n訂閱搜尋：在訂閱中搜尋。\n\n指定上傳者：列出該上傳者上傳的圖庫。其他選項會被忽略。\n\n指定標籤：列出含有該標籤的圖庫。其他選項會被忽略。</string>
 
     <string name="search_sh">只顯示已被移除的圖庫</string>
     <string name="search_sto">只顯示有種子的圖庫</string>
@@ -176,7 +152,7 @@
     <string name="delete_quick_search_message">刪除“%s”嗎？</string>
     <string name="no_quick_search">快速搜尋會顯示在這裡</string>
     <string name="add_quick_search_tip">圖庫列表的狀態將被儲存為快速搜尋。如果你想儲存搜尋面板的狀態，請先進行搜尋。</string>
-    <string name="readme">讀我檔</string>
+    <string name="readme">ReadMe</string>
     <string name="image_search_not_quick_search">無法將圖片搜尋加入快速搜尋</string>
     <string name="duplicate_quick_search">已存在相同的快速搜尋，名稱為“%s”。</string>
     <string name="duplicate_name">已經由重複的名稱了</string>
@@ -227,7 +203,10 @@
     <string name="add_to_favorite_failure">無法新增至收藏</string>
     <string name="remove_from_favorite_failure">無法從收藏中移除</string>
     <string name="filter_the_uploader">把上傳者“%s”加入濾除列表?</string>
+    <string name="filter_the_tag">隱藏標籤“%s”？</string>
     <string name="filter_added">已經新增篩選條件</string>
+    <string name="newer_version_avaliable">此圖庫有新版本可以使用。</string>
+    <string name="newer_version_title">%1$s, 增加於 %2$s</string>
 
     <!-- Rating -->
     <string name="rating10">太神啦!</string>
@@ -342,6 +321,7 @@
     <string name="rename_label_title">重新命名標籤</string>
     <string name="delete_label_title">刪除標籤</string>
     <string name="delete_label_message">將 “%s”刪除？</string>
+    <string name="rename_label">重新命名</string>
 
     <!-- History -->
     <string name="no_history">歷史紀錄將會顯示在這裡</string>
@@ -366,6 +346,7 @@
     <string name="set_pattern_protection">設定圖形解鎖</string>
     <string name="set_pattern_protection_tip">繪製圖案來設定繪圖解鎖\n留白以取消圖案保護</string>
     <string name="set">設定</string>
+    <string name="enable_biometric">允許使用生物識別解鎖</string>
 
     <!-- UConfig Activity -->
     <string name="u_config">EHentai 設定</string>
@@ -393,6 +374,7 @@
     <string name="page_menu_refresh">@string/refresh</string>
     <string name="page_menu_share">@string/share</string>
     <string name="page_menu_save">儲存</string>
+    <string name="page_menu_save_to">儲存到…</string>
     <string name="page_menu_add_bookmark">新增書籤</string>
     <string name="gallery_menu_title">選單</string>
     <string name="share_image">分享圖片</string>
@@ -408,17 +390,14 @@
     <string name="settings_eh_identity_cookies">身份識別 Cookie</string>
     <string name="settings_eh_identity_cookies_summary">可用於登入</string>
     <string name="settings_eh_identity_cookies_signed">身份 Cookie 可用於登入該帳號。&lt;br&gt;&lt;b&gt;請注意資料安全&lt;/b&gt;&lt;br&gt;&lt;br&gt;%s</string>
-    <string name="settings_eh_identity_cookies_tourist">未登入</string>
+    <string name="settings_eh_identity_cookies_tourist">訪客模式</string>
     <string name="settings_eh_identity_cookies_copy">複製</string>
     <string name="settings_u_config">EHentai 設定</string>
     <string name="settings_u_config_summary">EHentai 網站上的設定</string>
     <string name="settings_my_tags">我的標籤</string>
     <string name="settings_my_tags_summary">EHentai 網站上的我的標籤</string>
-    <string name="settings_eh_theme">主題</string>
-    <string name="settings_eh_theme_light">亮色</string>
-    <string name="settings_eh_theme_dark">暗色</string>
-    <string name="settings_eh_theme_black">黑色</string>
-    <string name="settings_eh_apply_nav_bar_theme_color">導航欄應用主題配色</string>
+    <string name="settings_eh_theme_light">淺色</string>
+    <string name="settings_eh_theme_dark">深色</string>
     <string name="settings_eh_gallery_site">圖庫站台</string>
     <string name="settings_eh_launch_page">啟動頁</string>
     <string name="settings_eh_list_mode">列表模式</string>
@@ -435,12 +414,6 @@
     <string name="settings_eh_thumb_resolution_summary">%s，指定解析度可能會使縮圖取得失敗</string>
     <string name="settings_eh_thumb_resolution_auto">自動</string>
     <string name="settings_eh_fix_thumb_url">修正縮圖連結</string>
-    <string name="settings_eh_default_categories">顯示在首頁的分類</string>
-    <string name="settings_eh_default_categories_summary">顯示在首頁的分類就跟預設一樣</string>
-    <string name="settings_eh_excluded_tag_namespaces">除標籤命名空間</string>
-    <string name="settings_eh_excluded_tag_namespaces_summary">在預設標籤搜尋中排除特定的標籤命名空間</string>
-    <string name="settings_eh_excluded_languages">排除語言</string>
-    <string name="settings_eh_excluded_languages_summary">在首頁與搜尋中隱藏指定語言的圖庫</string>
     <string name="settings_eh_show_jpn_title">顯示日文標題</string>
     <string name="settings_eh_show_jpn_title_summary">需同時在 EHentai 網站設定中啟用 Japanese Title</string>
     <string name="settings_eh_show_gallery_pages">顯示圖庫頁數</string>
@@ -458,6 +431,7 @@
     <string name="settings_read_screen_rotation_default">系統預設</string>
     <string name="settings_read_screen_rotation_portrait">直向</string>
     <string name="settings_read_screen_rotation_landscape">橫向</string>
+    <string name="settings_read_screen_rotation_sensor">自動旋轉</string>
     <string name="settings_read_reading_direction">閱讀方向</string>
     <string name="settings_read_reading_direction_left_to_right">由左到右</string>
     <string name="settings_read_reading_direction_right_to_Left">由右到左</string>
@@ -483,17 +457,19 @@
     <string name="settings_read_reading_fullscreen">全螢幕</string>
     <string name="settings_read_custom_screen_lightness">自訂螢幕亮度</string>
     <string name="settings_read_screen_lightness">螢幕亮度</string>
+    <string name="settings_read_reverse_volume">翻轉音量鍵</string>
 
     <string name="settings_download">下載</string>
     <string name="settings_download_download_location">下載路徑</string>
     <string name="settings_download_invalid_download_location">無效的下載路徑</string>
     <string name="settings_download_cant_get_download_location">無法取得下載路徑</string>
-    <string name="settings_download_pick_dir_kk">在 Android 4.4+  KitKat 中您無法把數據寫到外接 SD 卡裡，除非你駭了他。不過 &lt;SD card&gt;/Android/data/com.hippo.ehviewer 這個路徑比較特別，可以寫入。</string>
-    <string name="settings_download_pick_dir_l">Android 5.0+ Lollipop 提供了新的寫入外接 SD 卡的 API。如果您想把下載路徑設定到外接 SD 卡上，點擊“檔案”按鈕</string>
-    <string name="settings_download_document">檔案</string>
-    <string name="settings_download_continue">繼續</string>
+    <string name="settings_download_media_scan">允許其他程式進行媒體掃描</string>
+    <string name="settings_download_media_scan_summary_on">請別讓別人看到你的相簿</string>
+    <string name="settings_download_media_scan_summary_off">大部分相簿軟體將會忽略顯示下載路徑中的影像</string>
     <string name="settings_download_multi_thread_download">同時多重下載</string>
     <string name="settings_download_multi_thread_download_summary">最多同時下載 %s 張圖片</string>
+    <string name="settings_download_download_delay">下載延時</string>
+    <string name="settings_download_download_delay_summary">每次下載延時 %s 毫秒</string>
     <string name="settings_download_preload_image">預載圖片</string>
     <string name="settings_download_preload_image_summary">向後預載 %s 張圖片</string>
     <string name="settings_download_image_resolution">圖片解析度</string>
@@ -501,9 +477,6 @@
     <string name="settings_download_image_resolution_auto">自動</string>
     <string name="settings_download_download_origin_image">下載原圖</string>
     <string name="settings_download_download_origin_image_summary">這很危險！勾選這個選項會導致圖片流量配額快速耗用</string>
-    <string name="settings_download_media_scan">允許其他程式進行媒體掃描</string>
-    <string name="settings_download_media_scan_summary_on">請別讓別人看到你的相簿</string>
-    <string name="settings_download_media_scan_summary_off">大部分相簿軟體將會忽略顯示下載路徑中的影像</string>
     <string name="settings_download_restore_download_items">回復下載的檔案</string>
     <string name="settings_download_restore_download_items_summary">回復下載路徑中的所有下載的檔案</string>
     <string name="settings_download_restoring">回復中</string>
@@ -518,7 +491,7 @@
     <string name="settings_advanced">進階</string>
     <string name="settings_advanced_save_parse_error_body">解析失敗時儲存網頁的內容</string>
     <string name="settings_advanced_save_parse_error_body_summary">網頁內容可能含有敏感的隱私資料</string>
-    <string name="settings_advanced_save_crash_log">應用崩潰時儲存錯誤日誌</string>
+    <string name="settings_advanced_save_crash_log">應用程式崩潰時儲存錯誤日誌</string>
     <string name="settings_advanced_save_crash_log_summary">錯誤日誌可以幫助開發者修正問題</string>
     <string name="settings_advanced_dump_logcat">傾印log</string>
     <string name="settings_advanced_dump_logcat_summary">儲存log紀錄至外接儲存裝置中</string>
@@ -538,6 +511,8 @@
     <string name="settings_advanced_built_in_hosts_summary">應用提供的主機到IP的對映\n可被自定義 hosts.txt 覆蓋</string>
     <string name="settings_advanced_custom_hosts_title">自定義 hosts.txt</string>
     <string name="settings_advanced_custom_hosts_summary">將主機名稱對映到相應的IP位址\n可覆蓋內建 hosts.txt</string>
+    <string name="settings_advanced_domain_fronting_title">域名前綴</string>
+    <string name="settings_advanced_domain_fronting_summary">繞過 SNI 封鎖</string>
     <string name="settings_privacy_pattern_protection_title">繪圖解鎖</string>
     <string name="settings_privacy_pattern_protection_not_set">尚未設定繪圖解鎖</string>
     <string name="settings_privacy_pattern_protection_set">已設定繪圖解鎖</string>
@@ -553,54 +528,8 @@
     <string name="settings_about_declaration_summary">EhViewer 與 E-Hentai.org 無任何聯繫</string>
     <string name="settings_about_author">作者</string>
     <string name="settings_about_latest_release">最新版本</string>
-    <string name="settings_about_website">網站</string>
     <string name="settings_about_source">原始碼</string>
-    <string name="settings_about_changelog">更新日誌</string>
-    <string name="settings_about_help">說明</string>
-    <string name="settings_about_license">授權</string>
-    <string name="settings_about_license_summary">EhViewer 的誕生離不開許多開源專案</string>
-    <string name="settings_about_donate">贊助</string>
-    <string name="settings_about_donate_message">您的贊助將不會替您產生任何特權，但能夠幫助我能夠繼續維護這個程式。</string>
-    <string name="settings_about_donate_alipay">支付寶</string>
-    <string name="settings_about_donate_paypal">PayPal</string>
-    <string name="settings_about_donate_open">開啟</string>
-    <string name="settings_about_donate_copy">複製</string>
-    <string name="settings_about_donate_copied">已複製</string>
-    <string name="settings_privacy_enable_analytics">啟用資料統計</string>
-    <string name="settings_privacy_about_analytics">關於資料統計</string>
     <string name="settings_about_version">版本號碼</string>
-    <string name="settings_about_check_for_updates">檢查更新</string>
-    <string name="settings_about_beta_update_channel">安裝測試更新版</string>
-    <string name="settings_about_beta_update_channel_summary">測試更新版可能會使裝置出現不可預期的錯誤</string>
-
-    <!-- ExcludedLanguagesScene -->
-    <string name="excluded_languages">排除語言</string>
-    <string name="select_all">全選</string>
-    <string name="deselect_all">全取消</string>
-    <string name="invert_selection">反轉選取</string>
-    <string name="language">語言</string>
-    <string name="original">原始作品</string>
-    <string name="translated">翻譯版</string>
-    <string name="rewrite">改寫</string>
-    <string name="language_japanese">日語</string>
-    <string name="language_english">英語</string>
-    <string name="language_chinese">漢語</string>
-    <string name="language_dutch">荷蘭語</string>
-    <string name="language_french">法語</string>
-    <string name="language_german">德語</string>
-    <string name="language_hungarian">匈牙利語</string>
-    <string name="language_italian">義大利語</string>
-    <string name="language_korean">韓語</string>
-    <string name="language_polish">波蘭語</string>
-    <string name="language_portuguese">葡萄牙語</string>
-    <string name="language_russian">俄語</string>
-    <string name="language_spanish">西班牙語</string>
-    <string name="language_thai">泰語</string>
-    <string name="language_vietnamese">越南語</string>
-    <string name="language_na">N/A</string>
-    <string name="language_other">其他</string>
-
-    <string name="please_wait">請稍候</string>
 
     <string name="proxy_enable">啟用</string>
     <string name="proxy_enabled">已啟用</string>
@@ -618,12 +547,7 @@
 
     <string name="app_language_system">系統語言（預設）</string>
 
-    <!-- License -->
-    <string name="license">授權</string>
-
-    <!-- Dir Picker-->
-    <string name="dir_picker">選擇資料夾</string>
-    <string name="directory_not_writable">該資料夾無法寫入</string>
+    <string name="please_wait">請稍候</string>
 
     <!-- Favorites -->
     <string name="cloud_favorites">雲端收藏</string>
@@ -670,7 +594,6 @@
     </plurals>
     <string name="yesterday">昨天</string>
     <string name="some_days_ago">%d 天前</string>
-
     <plurals name="second">
         <item quantity="other">秒</item>
     </plurals>
@@ -694,7 +617,45 @@
     <string name="download_archive_failure_no_hath">下載壓縮檔需要 H@H 客戶端</string>
     <string name="settings_privacy">隱私</string>
     <string name="settings_privacy_secure">不允許螢幕擷取</string>
-    <string name="settings_privacy_secure_summary">啟用後，將無法對本程式進行螢幕擷取，同時，將不會在系統任務切換器中顯示該程式的預覽內容\n\n重新啟動本程式以套用此變更</string>
+    <string name="settings_privacy_secure_summary">啟用後，將無法對本程式進行螢幕擷取，同時，將不會在系統任務切換器中顯示該程式的預覽內容，重新啟動本程式以套用此變更</string>
+
+    <string name="download_service">下載服務</string>
     <string name="favorite_name">收藏圖庫</string>
 
+    <string name="black_dark_theme">純黑深色主題</string>
+    <string name="download_filter">過濾</string>
+    <string name="download_all">全部</string>
+    <string name="download_start_all_reversed">全部開始（倒序）</string>
+
+    <string name="no_browser_installed">請安裝一個瀏覽器。</string>
+    <string name="toplist_alltime">從始至終</string>
+    <string name="toplist_pastyear">過去一年</string>
+    <string name="toplist_pastmonth">過去一個月</string>
+    <string name="toplist_yesterday">昨日</string>
+    <string name="toplist">排行</string>
+    <string name="tag_vote_down">不，這不是</string>
+    <string name="tag_vote_up">是的，這很正確</string>
+    <string name="tag_vote_successfully">投票成功</string>
+    <string name="from_clipboard">從剪貼板匯入</string>
+    <string name="from_clipboard_error">未在剪貼板中發現 Cookies。</string>
+    <string name="delete_search_history">從搜索記錄中刪除“%s”？</string>
+    <string name="read_theme">色彩主題</string>
+    <string name="follow_app">跟隨應用</string>
+    <string name="settings_advanced_clear_memory_cache_done">完成記憶體快取清理</string>
+    <string name="action_add_tag">增加標籤</string>
+    <string name="action_add_tag_tip">增加新標籤，用逗號「，」分割</string>
+    <string name="error_no_webview">WebView 不可用</string>
+    <string name="comment_user_uploader">%s （上傳者）</string>
+    <string name="settings_eh_metered_network_warning">流量計費網路警告</string>
+    <string name="metered_network_warning">正在使用流量計費網路</string>
+    <string name="read_from">從第 %d 頁閱讀</string>
+    <string name="settings_request_news_title">啟動時請求新聞頁面</string>
+    <string name="copy_trans">複製翻譯</string>
+    <string name="reset_download_location">恢復預設路徑</string>
+    <string name="pick_new_download_location">選擇新路徑</string>
+    <string name="dont_show_again">不再顯示</string>
+    <string name="open_settings">打開設定</string>
+    <string name="app_link_not_verified_message">對於 Android 12 及更新的版本，您需要手動增加連結到已驗證連結才能在 EhViewer 中打開 E-Hentai 連結。</string>
+    <string name="app_link_not_verified_title">應用連結未驗證</string>
+    <string name="open_by_default">預設打開</string>
 </resources>
